--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CLEARCHAIN - Legal Help for Online Fraud Victims</title>
-    <meta name="description" content="Licensed legal professionals helping victims of online fraud and scams. Free consultation available." />
+    <title>CLEARCHAIN - Legal Consultation for Online Fraud Victims</title>
+    <meta name="description" content="Licensed legal professionals providing consultation services to help victims of online fraud understand their legal rights and options." />
     <meta name="author" content="CLEARCHAIN" />
 
-    <meta property="og:title" content="CLEARCHAIN - Legal Help for Online Fraud Victims" />
-    <meta property="og:description" content="Licensed legal professionals helping victims of online fraud and scams. Free consultation available." />
+    <meta property="og:title" content="CLEARCHAIN - Legal Consultation for Online Fraud Victims" />
+    <meta property="og:description" content="Licensed legal professionals providing consultation services to help victims of online fraud understand their legal rights and options." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
@@ -234,7 +234,7 @@
           </div>
         </div>
                  <button class="cta-button transform-gpu" onclick="document.getElementById('consultation-form')?.scrollIntoView({behavior:'smooth'})">
-           Get Free Legal Review Now
+           Schedule Free Consultation
          </button>
       </div>
     </div>
